--- a/html/recomendações.html
+++ b/html/recomendações.html
@@ -29,7 +29,7 @@
     <nav id="perfil">
         <ul>
             <li>
-                <a href="solo.html">Matérias</a>
+                <a href="/html/solo.html">Matérias</a>
             </li>
             <li>
                 <a class="pagina" href="recomendações.html">Minha turma</a>
