--- a/html/solo.html
+++ b/html/solo.html
@@ -28,7 +28,7 @@
     <nav id="perfil">
         <ul>
             <li>
-                <a class="pagina" href="solo.html">Matérias</a>
+                <a class="pagina" href="/html/solo.html">Matérias</a>
             </li>
             <li>
                 <a href="recomendações.html">Minha turma</a>
