--- a/html/enviar.html
+++ b/html/enviar.html
@@ -27,13 +27,13 @@
 
             <div>
 
-        <a href="#" id="sala">sala virtual</a>
+        <a href="/html/recomendações.html" id="sala">sala virtual</a>
 
             </div>
 
             <div>
 
-        <a href="#" id="estudo">estudo sozinho</a>
+        <a href="/html/solo.html" id="estudo">estudo sozinho</a>
 
             </div>
 
