--- a/html/enviar.html
+++ b/html/enviar.html
@@ -26,24 +26,28 @@
         <ul>
 
             <div>
-
+        <img src="/imagens/livros.png">
         <a href="/html/recomendações.html" id="sala">sala virtual</a>
 
             </div>
 
             <div>
 
+        <img src="/imagens/livros.png">
         <a href="/html/solo.html" id="estudo">estudo sozinho</a>
 
             </div>
 
             <div>
 
+        <img src="/imagens/livros.png">
         <a href="#" id="mentoria">mentorias</a>
 
             </div>
 
             <div class="biblioteca">
+
+        <img src="/imagens/livros.png">
         <a href="../html/biblioteca.html" id="biblioteca">biblioteca</a>
 
          </div>
